# open-alphastream

./: .gitignore  AGENTS.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: FILE_FORMAT.md  FILE_FORMAT_PLAINTEXT.md  REVERSE_ENGINEERING.md  RUST_IMPLEMENTATION.md
docs/adr/: 0001-format-abstraction.md  0002-transport-abstraction.md  0003-frame-cache-policy.md  0004-error-model.md  0005-runtime-and-builder.md  0006-public-api-and-c-abi.md  0007-metadata-and-timebase.md  0008-integration-testing-and-benchmarks.md  0009-handle-vs-processor.md  0010-write-support-for-asvr-and-asvp.md  0011-ring-buffer-frame-cache.md
docs/prd/: prd-alphastream-rs.md
docs/tasks/: 00-index.md  01-architecture-overview.md  02-format-abstraction.md  03-transport-abstraction.md  04-transport-http.md  05-transport-local.md  06-transport-in-memory.md  07-async-runtime-concurrency.md  08-scheduler-rate-control.md  09-frame-cache-policy.md  10-rasterization-polystreams.md  11-rasterization-resize.md  12-public-api-facade.md  13-c-abi-pinvoke.md  14-error-model.md  15-benchmarks.md  16-integration-tests.md  17-builder-config.md  18-metadata-timebase.md  19-triangle-strip-generation.md  20-asvr-parsing.md  21-asvp-parsing.md  22-decryption.md  23-format-integration.md  24-lru-cache.md  25-prefetching.md  26-thread-safety-cache.md  27-cache-scheduler-integration.md  28-handle-processor-consolidation.md  29-c-abi-refactor.md  30-lru-eviction-policy.md  31-forward-prefetching.md  32-thread-safe-cache.md  33-cache-scheduler-integration.md  34-lru-prefetch-threadsafe-tests.md  35-architecture-api-docs-update.md
docs/tasks/planning/: implementation-sprints.md
python/: alpha_stream_crypto.py  alpha_stream_draw.py  decrypt.py  requirement.txt
rust/alphastream-rs/: Cargo.toml
rust/alphastream-rs/benches/: cache_benchmark.rs
rust/alphastream-rs/src/: api.rs  cache.rs  formats.rs  lib.rs  rasterizer.rs  runtime.rs  scheduler.rs  serializers.rs  testlib.rs  transport.rs
rust/alphastream-rs/tests/: integration_tests.rs
