[package]
name = "alphastream-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libalphastream"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1"
thiserror = "1"
memmap2 = "0.5"
tempfile = "3"
dashmap = "5"
lru = "0.12"
chacha20 = { version = "0.7", features = ["legacy"] }
scrypt = "0.8"
flate2 = "1.0"
generic-array = "0.14"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
