[package]
name = "alphastream-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libalphastream"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ctrlc = "3"
tokio = { version = "1", features = ["full"] }
# note 0.13 depends on aws-lc-rs, which on windows needs cmake and nasm
reqwest = { version = "0.12.28", features = ["json"] }
bytes = "1"
thiserror = "2.0"
memmap2 = "0.9"
tempfile = "3"
chacha20 = { version = "0.9.1" }
scrypt = "0.11"
flate2 = "1.0"
generic-array = "1.3"
futures = "0.3"

[dev-dependencies]
criterion = "0.8"
proptest = "1"

[[bench]]
name = "cache_benchmark"
harness = false

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
