[package]
name = "alphastream-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "libalphastream"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime (enabled only needed features for smaller binary and faster compile, might need less still)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }

# HTTP client
reqwest = { version = "0.12.28" }

# Async utilities
futures = "0.3"
bytes = "1"

# Error handling
thiserror = "2.0"

# File and memory mapping
memmap2 = "0.9"
tempfile = "3"

# Cryptography
chacha20 = "0.9.1"
scrypt = "0.11"

# Compression
flate2 = "1.0"

# Used in demo bin
ctrlc = "3"

[dev-dependencies]
criterion = "0.8"
proptest = "1"

[[bench]]
name = "cache_benchmark"
harness = false

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
